--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=/var/www/PhpProject1
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/QuizProject/
+url=http://QuizProject/
