--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=/var/www/PhpProject1
+include.path.private=
 index.file=testProject/index.php
 run.as=LOCAL
 url=http://QuizProject/
