--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,19 @@
 <ifModule mod_rewrite.c>
 RewriteEngine on
-RewriteRule ^([\w]+)/accueil.html$ index.php?lang=$1
+RewriteRule ^([\w]+)/home.html$ index.php?lang=$1
 RewriteRule ^([\w]+)/createBattle.html$ views/creation.php?lang=$1
 RewriteRule ^([\w]+)/battle.html$ views/duel.php?lang=$1
 RewriteRule ^([\w]+)/leaderboard-([\d]+).html$ views/leaderboard.php?lang=$1&type=$2
 RewriteRule ^([\w]+)/profile-([\d]+).html$ views/profile.php?id=$2&lang=$1
 RewriteRule ^([\w]+)/profile.html$ views/profile.php?lang=$1
-RewriteRule ^([\w]+)/logout.html controllers/logout.php?lang=$1
-RewriteRule ^accueil.html$ index.php?lang=en
+RewriteRule ^([\w]+)/logout.html views/logout.php?lang=$1
+RewriteRule ^home.html$ index.php?lang=en
 RewriteRule ^createBattle.html$ views/creation.php?lang=en
 RewriteRule ^battle.html$ views/duel.php?lang=en
 RewriteRule ^leaderboard-([\d]+).html$ views/leaderboard.php?lang=en&type=$1
 RewriteRule ^profile-([\d]+).html$ views/profile.php?id=$1&lang=en
 RewriteRule ^profile.html$ views/profile.php?lang=en
-RewriteRule ^logout.html controllers/logout.php?lang=en
+RewriteRule ^logout.html views/logout.php?lang=en
 ErrorDocument 403 /views/error403.php
 ErrorDocument 404 /views/error404.php
 </ifModule>
