--- a/.htaccess
+++ b/.htaccess
@@ -3,14 +3,14 @@ RewriteEngine on
 RewriteRule ^([\w]+)/home.html$ index.php?lang=$1
 RewriteRule ^([\w]+)/createBattle.html$ views/creation.php?lang=$1
 RewriteRule ^([\w]+)/battle.html$ views/duel.php?lang=$1
-RewriteRule ^([\w]+)/leaderboard-([\d]+).html$ views/leaderboard.php?lang=$1&type=$2
+RewriteRule ^([\w]+)/leaderboard-([\d]+).html$ views/leaderboard.php?lang=$1&langage=$2
 RewriteRule ^([\w]+)/profile-([\d]+).html$ views/profile.php?id=$2&lang=$1
 RewriteRule ^([\w]+)/profile.html$ views/profile.php?lang=$1
 RewriteRule ^([\w]+)/logout.html views/logout.php?lang=$1
 RewriteRule ^home.html$ index.php?lang=en
 RewriteRule ^createBattle.html$ views/creation.php?lang=en
 RewriteRule ^battle.html$ views/duel.php?lang=en
-RewriteRule ^leaderboard-([\d]+).html$ views/leaderboard.php?lang=en&type=$1
+RewriteRule ^leaderboard-([\d]+).html$ views/leaderboard.php?lang=en&langage=$1
 RewriteRule ^profile-([\d]+).html$ views/profile.php?id=$1&lang=en
 RewriteRule ^profile.html$ views/profile.php?lang=en
 RewriteRule ^logout.html views/logout.php?lang=en
